fix: header options z-index

--- a/apps/web/src/app/modules/board/board/board.component.scss
+++ b/apps/web/src/app/modules/board/board/board.component.scss
@@ -84,6 +84,7 @@ tapiz-search-options {
 }
 
 tapiz-users,
+tapiz-board-header-options,
 tapiz-header {
   z-index: var(--board-tools-layer);
 }
